# stm32f407vg_cpp

./: .clang-format  .gitignore  404.html  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  install.sh  mkdocs.yml  sitemap.xml  stmproject.toml
.github/workflows/: build.yml  docs.yml
chips/: index.html
chips/datasheets/: index.html
chips/stm32f4/: index.html
cmake/: stm32f4_chips.cmake
docker/: Dockerfile.build  Dockerfile.ci
docs/: DATASHEETS.md  index.md  index.ru.md  migration.md  migration.ru.md  quickstart.md  quickstart.ru.md  release.md  release.ru.md  stmtool.md  stmtool.ru.md
docs/chips/: datasheets.md  datasheets.ru.md  index.md  index.ru.md  stm32f4.md  stm32f4.ru.md
docs/modules/: drivers.md  drivers.ru.md  freertos.md  freertos.ru.md  sensors.md  sensors.ru.md
docs/sensors/: index.md  index.ru.md  mpu6050.md  mpu6050.ru.md  ssd1306.md  ssd1306.ru.md  w25q32.md  w25q32.ru.md
gcm.cache/: driver.types.gcm  test_gpio.gcm  test_gpio2.gcm  test_private.gcm  test_types.gcm
ldscripts/: mem.ld.in
migration/: index.html
modules/drivers/: index.html
modules/freertos/: index.html
modules/sensors/: index.html
quickstart/: index.html
release/: index.html
ru/: index.html
ru/chips/: index.html
ru/chips/datasheets/: index.html
ru/chips/stm32f4/: index.html
ru/migration/: index.html
ru/modules/drivers/: index.html
ru/modules/freertos/: index.html
ru/modules/sensors/: index.html
ru/quickstart/: index.html
ru/release/: index.html
ru/sensors/: index.html
ru/sensors/mpu6050/: index.html
ru/sensors/ssd1306/: index.html
ru/sensors/w25q32/: index.html
ru/stmtool/: index.html
sdk/cmake/: stm32_drivers.cmake  stm32_families.cmake  stm32_rtos.cmake  stm32_sdk.cmake  stm32_sensors.cmake  stm32_storage.cmake  stm32_toolchain.cmake
sdk/cmake/families/: stm32f0.cmake  stm32f1.cmake  stm32f2.cmake  stm32f3.cmake  stm32f4.cmake  stm32f7.cmake  stm32g0.cmake  stm32g4.cmake  stm32h5.cmake  stm32h7.cmake  stm32l0.cmake  stm32l1.cmake  stm32l4.cmake  stm32l5.cmake  stm32u5.cmake  stm32wb.cmake  stm32wl.cmake
sdk/core/include/arm/: semihosting.h
sdk/core/include/cmsis/: cmsis_armcc.h  cmsis_armcc_V6.h  cmsis_armclang.h  cmsis_compiler.h  cmsis_gcc.h  core_armv8mml.h  core_cm0.h  core_cm23.h  core_cm33.h  core_cm7.h  core_cmFunc.h  core_cmSimd.h  core_sc000.h  core_sc300.h  mpu_armv8.h
sdk/rtos/src/: freertos_hooks.c
search/: search_index.json
sensors/: index.html
sensors/mpu6050/: index.html
sensors/ssd1306/: index.html
sensors/w25q32/: index.html
src/: main.cpp  subdir.mk
stmtool/: index.html
system/include/cmsis/: arm_common_tables.h  arm_math.h  cmsis_iccarm.h  cmsis_version.h  core_armv8mbl.h  core_cm0plus.h  core_cm1.h  core_cm3.h  core_cm4.h  core_cmInstr.h  mpu_armv7.h  stm32f4xx.h  tz_context.h
system/include/stm32f4-hal/: stm32_assert.h  stm32_assert_template.h  stm32f4xx_hal.h  stm32f4xx_hal_adc.h  stm32f4xx_hal_adc_ex.h  stm32f4xx_hal_can.h  stm32f4xx_hal_cec.h  stm32f4xx_hal_conf_template.h  stm32f4xx_hal_cortex.h  stm32f4xx_hal_crc.h  stm32f4xx_hal_cryp.h  stm32f4xx_hal_cryp_ex.h  stm32f4xx_hal_dac.h  stm32f4xx_hal_dac_ex.h  stm32f4xx_hal_dcmi.h  stm32f4xx_hal_dcmi_ex.h  stm32f4xx_hal_def.h  stm32f4xx_hal_dfsdm.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_dma2d.h  stm32f4xx_hal_dma_ex.h  stm32f4xx_hal_dsi.h  stm32f4xx_hal_eth.h  stm32f4xx_hal_exti.h  stm32f4xx_hal_flash.h  stm32f4xx_hal_flash_ex.h  stm32f4xx_hal_flash_ramfunc.h  stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_fmpi2c_ex.h  stm32f4xx_hal_fmpsmbus.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_gpio_ex.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_hash_ex.h  stm32f4xx_hal_hcd.h  stm32f4xx_hal_i2c.h  stm32f4xx_hal_i2c_ex.h  stm32f4xx_hal_i2s.h  stm32f4xx_hal_i2s_ex.h  stm32f4xx_hal_irda.h  (+59 more)
system/src/cmsis/: system_stm32f4xx.c  vectors_stm32f401xx.c  vectors_stm32f405xx.c  vectors_stm32f407xx.c  vectors_stm32f411xx.c  vectors_stm32f412xx.c  vectors_stm32f429xx.c  vectors_stm32f446xx.c
system/src/cortexm/: exception-handlers.c  initialize-hardware.c  reset-hardware.c
system/src/diag/: trace-impl.c  trace.c
system/src/newlib/: assert.c  cxx.cpp  exit.c
system/src/stm32f4-hal/: stm32f4xx_hal.c  stm32f4xx_hal.h  stm32f4xx_hal_adc.c  stm32f4xx_hal_adc_ex.c  stm32f4xx_hal_can.c  stm32f4xx_hal_cec.c  stm32f4xx_hal_cortex.c  stm32f4xx_hal_crc.c  stm32f4xx_hal_cryp.c  stm32f4xx_hal_cryp_ex.c  stm32f4xx_hal_dac.c  stm32f4xx_hal_dac_ex.c  stm32f4xx_hal_dcmi.c  stm32f4xx_hal_dcmi_ex.c  stm32f4xx_hal_dfsdm.c  stm32f4xx_hal_dma.c  stm32f4xx_hal_dma2d.c  stm32f4xx_hal_dma_ex.c  stm32f4xx_hal_dsi.c  stm32f4xx_hal_eth.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_flash.c  stm32f4xx_hal_flash_ex.c  stm32f4xx_hal_flash_ramfunc.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_fmpi2c_ex.c  stm32f4xx_hal_fmpsmbus.c  stm32f4xx_hal_gpio.c  stm32f4xx_hal_hash.c  stm32f4xx_hal_hash_ex.c  stm32f4xx_hal_hcd.c  stm32f4xx_hal_i2c.c  stm32f4xx_hal_i2c_ex.c  stm32f4xx_hal_i2s.c  stm32f4xx_hal_i2s_ex.c  stm32f4xx_hal_irda.c  stm32f4xx_hal_iwdg.c  stm32f4xx_hal_lptim.c  stm32f4xx_hal_ltdc.c  stm32f4xx_hal_ltdc_ex.c  (+54 more)
templates/bare-metal/blink/: CLAUDE.md.template  CMakeLists.txt.template  DEVELOPMENT.md  main.cpp  stmproject.toml.template  template.toml
templates/bare-metal/i2c-scan/: CLAUDE.md.template  CMakeLists.txt.template  main.cpp  template.toml
templates/freertos/blink/: CLAUDE.md.template  CMakeLists.txt.template  main.cpp  template.toml
templates/freertos/i2c-scan/: CMakeLists.txt.template  main.cpp  stmproject.toml.template  template.toml
templates/freertos/imu-flash-oled-demo/: CLAUDE.md.template  main.cpp  template.toml
templates/freertos/mpu6050-uart/: CLAUDE.md.template  CMakeLists.txt.template  main.cpp  template.toml
templates/freertos/oled-display-test/: CLAUDE.md.template  main.cpp  template.toml
templates/freertos/w25q32-flash-test/: CLAUDE.md.template  main.cpp  template.toml
tools/docs/: requirements.txt
tools/stmtool/: .gitignore  pyproject.toml
tools/stmtool/stmtool/: __init__.py  cli.py  completions.py  config.py  i18n.py  project.py  sdk.py
(+66 files in other folders)
